--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@ layout: compress
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
                          Posts
                       </a>
-                      <a class="btn zoombtn" href="{{ site.url }}/discord">
+                      <a class="btn zoombtn" href="https://discord.gg/xDq5sN3">
                          Discord
                       </a>
                  </h3>
