--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,3 +1,5 @@
+original layout
+
 ---
 layout: compress
 ---
@@ -15,17 +17,17 @@ layout: compress
     <header class="header flex" role="banner">
         <div class="container animated fadeIn">
             <div class="row">
-                    <a>
+                    <a href="{{ site.url }}">
                         <img src="{{ site.logo }}" class="img-circle zoombtn animated rotateIn">
                     </a>
                     <h3 class="title">
-                        <a class="zoombtn">
+                        <a class="zoombtn" href="{{ site.url }}">
                         	<p style="font-size:1.2rem;font-weight:300">{{ site.title }}</p>
 			            </a>
                     </h3>
                     <hr class="hr-line">
                     <h3 class="title">
-                        <a>
+                        <a href="{{ site.url }}">
                         	<p style="font-size:1rem;font-weight:300">{{ site.bio }}</p>
 			            </a>
                     </h3>
